# datafusion

./: .gitignore  LICENSE  README.md  analysis.ipynb  analysis_beads.ipynb  analysis_kidney2.ipynb  baseline.py  bin_data.py  data_fusion_automatic_diff.py  environment.yml  fusion.py  hyperspectral2RGBv2.py  losses.py  plot.ipynb  plot2.py  plot_helpers.py  plotting.py  pyproject.toml  utils.py
analysis/: beads.ipynb  cells.ipynb  cells_fit.ipynb  pycon.ipynb  pycon_it_2025.ipynb  runtime.py
datafusion/: baseline.py  ffusion.py  fusion.py  plot_helpers.py  utils.py
resources/: srgb_cmf_advanced.csv  srgb_cmf_basic.csv
